# voice-modulation-linux

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
cmake/: FindPipeWire.cmake
docs/plans/: 2026-04-17-voice-foldering-design.md  2026-04-17-voice-foldering-implementation.md
resources/: vml.desktop
resources/default-profiles/: deep-voice.json  radio.json  robot.json
scripts/: install.sh
src/: main.cpp
src/app/: Application.cpp  Application.h  VerboseLogger.cpp  VerboseLogger.h
src/audio/: AudioEngine.cpp  AudioEngine.h  ClipRecorder.h  EffectPipeline.cpp  EffectPipeline.h  PipeWireDevice.cpp  PipeWireDevice.h  RingBuffer.h
src/effects/: BitCrushEffect.cpp  BitCrushEffect.h  ChorusEffect.cpp  ChorusEffect.h  CompressorEffect.cpp  CompressorEffect.h  DistortionEffect.cpp  DistortionEffect.h  EchoEffect.cpp  EchoEffect.h  EffectBase.h  EffectRegistry.cpp  EffectRegistry.h  FlangerEffect.cpp  FlangerEffect.h  FormantShifterEffect.cpp  FormantShifterEffect.h  GainEffect.cpp  GainEffect.h  NoiseGateEffect.cpp  NoiseGateEffect.h  NoiseSuppressionEffect.cpp  NoiseSuppressionEffect.h  PhaserEffect.cpp  PhaserEffect.h  PitchShiftEffect.cpp  PitchShiftEffect.h  ReverbEffect.cpp  ReverbEffect.h  RingModulatorEffect.cpp  RingModulatorEffect.h  TelephoneFilterEffect.cpp  TelephoneFilterEffect.h
src/gui/: EffectBlockWidget.cpp  EffectBlockWidget.h  EffectSettingsPanel.cpp  EffectSettingsPanel.h  FolderSidebar.cpp  FolderSidebar.h  KeyframeTimelineWidget.cpp  KeyframeTimelineWidget.h  MainWindow.cpp  MainWindow.h  ModulatorEditorDialog.cpp  ModulatorEditorDialog.h  PipelineWidget.cpp  PipelineWidget.h  SpectrumWidget.cpp  SpectrumWidget.h  SystemTray.cpp  SystemTray.h  VoiceDetailsPanel.cpp  VoiceDetailsPanel.h  VuMeter.cpp  VuMeter.h  WaveformWidget.cpp  WaveformWidget.h
src/modulation/: ModulationManager.cpp  ModulationManager.h  Modulator.cpp  Modulator.h
src/profile/: ProfileManager.cpp  ProfileManager.h  ZipWriter.h
tests/: test_effect_pipeline.cpp  test_folder_structure.cpp  test_profile_manager.cpp  test_ring_buffer.cpp
